--- a/src/content/blog/2023-post/index.mdx
+++ b/src/content/blog/2023-post/index.mdx
@@ -4,7 +4,7 @@ description: 'This a dummy post written in the year 2023.'
 date: 2023-06-01
 tags: ['dummy', 'placeholder']
 image: './2023.png'
-authors: ['Sadman']
+authors: ['sadman']
 ---
 
 This is a dummy post written in the year 2023.
