fix: bypass Image errors & remove number in heading

--- a/src/content/blog/2021-01-09-my-old-vs-code-setup/index.mdx
+++ b/src/content/blog/2021-01-09-my-old-vs-code-setup/index.mdx
@@ -7,7 +7,7 @@ tags: ['code', 'tools']
 authors: ['sadman']
 ---
 
-## I <3 VS Code
+## I ♥ VS Code
 
 I’ve used a lot of IDEs and code editors since I first wrote a “Hello World” program in grade school, from environments as simple as Python’s IDLE to those as jam-packed as IntelliJ IDEA. For now, I’ve settled on using Microsoft’s Visual Studio Code (VS Code) for pretty much all my programming needs. It’s free, open source, and insanely configurable (it can be as lightweight or as complex as you want it to be).
 
