fix: slug for old journalling blog post

--- a/src/content/blog/2020-08-17-on-keeping-a-journal/index.mdx
+++ b/src/content/blog/2020-08-17-on-keeping-a-journal/index.mdx
@@ -3,6 +3,7 @@ title: 'On keeping a journal'
 description: "Why you should be writing if you aren't already."
 date: 2020-08-17
 tags: ['writing']
+slug: on-keeping-a-journal
 authors: ['sadman']
 ---
 
@@ -13,8 +14,6 @@ import { SITE } from '@/consts'
 **I journal everyday.** And it's the one of the best investments I’ve ever made in my personal development and career. It formed the basis of my game plan for the future, and has helped me make decisions more times than I can remember.
 
 If you’ve never tried it before, you might be confused as to how the task of simply writing to yourself can be life-changing. But I assure you that it is, in more ways than one.
-
-Look at <a href={`${SITE.SITEURL}/blog/pey-coop-jobs-at-uoft`}>this blog post</a> for more information.
 
 ## Why Journal?
 
