--- a/src/content/blog/2024-09-10-pey-coop-jobs-at-uoft/index.mdx
+++ b/src/content/blog/2024-09-10-pey-coop-jobs-at-uoft/index.mdx
@@ -45,7 +45,7 @@ As a UofT engineering student who started their 3rd year last fall (and went thr
 
 ## The gaps this dashboard aims to fill
 
-### What employers are hiring, how many students they're hiring, and what types of jobs are available
+### Who's hiring
 
 There's a fair amount of talk in UofT circles (and on the PEY program's informative web pages) about what some of the biggest PEY Co-op employers are (e.g. AMD, Intel, etc.), but as a student it can still feel apprehensive if you're not aware of approximate numbers or ballpark figures of how many students you can expect different companies to hire.
 
